# phd

figures/: pyproject.toml
results/: 0-select-datasets-based-on-total-complexity.ipynb  analyze-results.ipynb  backups-in-case.ipynb  dataset_details.ipynb  keel-dataset-complexities.csv  load_base_runs.ipynb  note-results.ipynb  optimal-centroid-ga-check-results.ipynb  optimal-centroid-results.ipynb  quad-split-explainer.ipynb  quad-split-results.ipynb
