[tool.poetry]
name = "figures"
version = "0.1.0"
description = ""
authors = ["bgulowaty <b.gulowaty@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "*"
pandas = "*"
scienceplots = "*"
jupyterlab = "^4.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
